--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "awesome-utils",
-  "version": "1.0.0",
+  "name": "awesome-utils-normal",
+  "version": "1.0.1",
   "description": "tools for front-end development ",
   "main": "index.js",
   "repository": {
