feat: import lodash library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,13 +8,7 @@
 			"end": " */", // 自定义注释尾部
 			"use": false // 是否使用自定义注释符号
 		},
-		"language": [
-			"js",
-			"jsx",
-			"ts",
-			"tsx",
-			"scss"
-		],
+		"language": ["js", "jsx", "ts", "tsx", "scss"],
 		"headInsertLine": {
 			"js": 2, // js后缀的文件，在第二行插入文件头部注释
 			"jsx": 2,
@@ -28,10 +22,7 @@
 		},
 		"timeNoDetail": false, // 设为true精确到日期
 		"autoAlready": true, // 默认开启:只让支持的语言，自动添加头部注释. false:所有文件自动添加头部注释
-		"prohibitAutoAdd": [
-			"json",
-			"md"
-		], // 禁止.json .md文件，自动添加头部注释
+		"prohibitAutoAdd": ["json", "md"], // 禁止.json .md文件，自动添加头部注释
 		"autoAddLine": 100 // 默认文件超过100行就不再自动添加头部注释
 	},
 	// 文件头部注释
@@ -44,10 +35,11 @@
 	},
 	// 函数注释
 	"fileheader.cursorMode": {
+		"category": "",
 		"name": "",
-		"usage": "",
 		"param": "",
-		"return": ""
+		"return": "",
+		"usage": ""
 	},
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.wordWrap": "wordWrapColumn",
@@ -59,8 +51,8 @@
 	"eslint.enable": true,
 	"eslint.format.enable": true,
 	"prettier.requireConfig": true,
-	"prettier.printWidth": 120,
+	"prettier.printWidth": 200,
 	"prettier.singleQuote": true,
 	"prettier.tabWidth": 2,
-	"prettier.useTabs": true,
+	"prettier.useTabs": true
 }
