--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awesome-utils-normal",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "tools for front-end development ",
   "main": "index.js",
   "repository": {
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.8.0"
+  },
+  "dependencies": {
+    "decimal.js": "^10.2.0"
   }
 }
