--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "awesome-utils-normal",
-	"version": "1.0.15",
+	"version": "1.0.16",
 	"description": "tools for front-end development ",
 	"main": "index.js",
 	"repository": {
@@ -10,7 +10,15 @@
 	"bugs": "https://github.com/Inception-entry/utils/issues",
 	"author": "Inception-entry<batman_gotham@126.com>",
 	"license": "MIT",
+	"scripts": {
+		"start": "webpack-dev-server --open",
+		"build": "webpack --config webpack.config.js"
+	},
 	"devDependencies": {
+		"@babel/cli": "^7.10.5",
+		"@babel/core": "^7.10.5",
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
 		"eslint": "^6.8.0"
 	},
 	"dependencies": {
