--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
 		"@babel/core": "^7.10.5",
 		"@babel/plugin-proposal-class-properties": "^7.10.4",
 		"@babel/preset-env": "^7.10.4",
-		"eslint": "^6.8.0"
+		"babel-loader": "^8.1.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"eslint": "^6.8.0",
+		"html-webpack-plugin": "^4.3.0",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
 		"decimal.js": "^10.2.0"
