--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "awesome-utils-normal",
-	"version": "1.0.17",
+	"version": "1.0.18",
 	"description": "tools for front-end development ",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"repository": {
 		"url": "https://github.com/Inception-entry/utils.git",
 		"type": "git"
@@ -22,7 +22,6 @@
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"eslint": "^6.8.0",
-		"html-webpack-plugin": "^4.3.0",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0"
