--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,27 @@
 {
 	"presets": [
-		"@babel/preset-env"
+		[
+			"@babel/preset-env",
+			{
+				"useBuiltIns": "usage",
+				"modules": false
+			}
+		]
 	],
 	"plugins": [
 		[
 			"@babel/plugin-proposal-class-properties",
 			{
 				"loose": true
+			}
+		],
+		[
+			"@babel/plugin-transform-runtime",
+			{
+				"corejs": false,
+				"helpers": false,
+				"regenerator": false,
+				"useESModules": false
 			}
 		]
 	]
