--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@babel/cli": "^7.10.5",
 		"@babel/core": "^7.10.5",
 		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/plugin-transform-runtime": "^7.11.0",
+		"@babel/polyfill": "^7.10.4",
 		"@babel/preset-env": "^7.10.4",
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
