增加关键字配置，方便检索到这个包

--- a/package.json
+++ b/package.json
@@ -7,6 +7,26 @@
 		"url": "https://github.com/Inception-entry/utils.git",
 		"type": "git"
 	},
+	"keywords": [
+		"clone",
+		"decimal",
+		"bubble",
+		"debounce",
+		"throttle",
+		"deepClone",
+		"shallowClone",
+		"format mobile",
+		"format time",
+		"克隆",
+		"浮点数精度",
+		"阻止冒泡",
+		"防抖动",
+		"节流",
+		"深拷贝",
+		"浅拷贝",
+		"手机号格式化",
+		"日期格式化"
+	],
 	"bugs": "https://github.com/Inception-entry/utils/issues",
 	"author": "Inception-entry<batman_gotham@126.com>",
 	"license": "MIT",
